--- a/you.html
+++ b/you.html
@@ -27,7 +27,7 @@
       <div class="collapse navbar-collapse  bg-white" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto">
           <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link" href="#">Features</a>
+          <a class="nav-item nav-link" href="#">Featuress</a>
           <a class="nav-item nav-link" href="#">Pricing</a>
         </div>
       </div>
